--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
           <div class="testimonials__card flex flex-col justify-center">
             <img
-              class="testimonials center"
+              class="testimonials__image center"
               src="./images/image-jennie.jpg"
               alt="Jennie"
             />
@@ -307,7 +307,7 @@
     </main>
 
     <!-- FOOTER SECTION -->
-    <footer class="footer">
+    <footer class="footer container">
       <h2 class="footer__title text-center">sunnyside</h2>
       <div class="footer__row">
         <nav class="footer__nav">
