--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <img class="header__logo" src="./images/logo.svg" alt="sunnyside" />
         <nav class="header__nav flex items-center">
           <ul class="flex flex-grow items-center">
-            <li>About</li>
-            <li>Services</li>
-            <li>Projects</li>
+            <li class="cursor-pointer">About</li>
+            <li class="cursor-pointer">Services</li>
+            <li class="cursor-pointer">Projects</li>
             <button class="cursor-pointer">Contact</button>
           </ul>
         </nav>
@@ -70,11 +70,11 @@
           <div class="brands__image">
             <picture>
               <source
-                media="(max-width: 757px)"
+                media="(max-width: 600px)"
                 srcset="./images/mobile/image-transform.jpg"
               />
               <source
-                media="(min-width: 756px )"
+                media="(min-width: 599px )"
                 srcset="./images/desktop/image-transform.jpg"
               />
               <img src="./images/desktop/image-transform.jpg" alt="" />
@@ -83,7 +83,7 @@
           <div class="brands__info flex flex-col">
             <div class="brands__wrapper flex flex-col">
               <h2 class="brands__title text-center">Transform your brand</h2>
-              <p class="brands__para text-center">
+              <p class="brands__para center text-center">
                 We are a full-service creative agency specializing in helping
                 brands grow fast. Engage your clients through compelling visuals
                 that do most of the marketing for you.
@@ -116,7 +116,7 @@
               <h2 class="brands__title text-center">
                 Standout to the right audiences
               </h2>
-              <p class="brands__para text-center">
+              <p class="brands__para center text-center">
                 Using a collaborative formula of designers, researchers,
                 photographers, videographers, and copywriters, we’ll build and
                 extend your brand in digital places.
